--- a/S1FileSync/S1FileSync.csproj
+++ b/S1FileSync/S1FileSync.csproj
@@ -6,12 +6,16 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <Authors>Jay9011</Authors>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,7 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FileSyncApp.Core\FileSyncApp.Core.csproj" />
+    <ProjectReference Include="..\FileIOService\FileIOService.csproj" />
+    <ProjectReference Include="..\NetConnectionService\NetConnectionService.csproj" />
   </ItemGroup>
 
 </Project>
