feat. 서비스용 프로그램 추가 및 테스트 (미완)

--- a/S1FileSync/S1FileSync.csproj
+++ b/S1FileSync/S1FileSync.csproj
@@ -27,8 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FileIOService\FileIOService.csproj" />
-    <ProjectReference Include="..\NetConnectionService\NetConnectionService.csproj" />
+    <ProjectReference Include="..\FileIOHelper\FileIOHelper.csproj" />
+    <ProjectReference Include="..\NetConnectionHelper\NetConnectionHelper.csproj" />
   </ItemGroup>
 
 </Project>
