--- a/S1FileSync/S1FileSync.csproj
+++ b/S1FileSync/S1FileSync.csproj
@@ -7,7 +7,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <Authors>Jay9011</Authors>
+    <ApplicationIcon>Assets\app.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\app.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
