--- a/S1FileSyncService/S1FileSyncService.csproj
+++ b/S1FileSyncService/S1FileSyncService.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
