--- a/S1FileSync/S1FileSync.csproj
+++ b/S1FileSync/S1FileSync.csproj
@@ -11,17 +11,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Assets\app.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
+    <Content Include="Assets\app.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.1" />
   </ItemGroup>
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.WindowsDesktop.App"/>
+	</ItemGroup>
 
   <ItemGroup>
     <Page Update="Views\MainWindow.xaml">
@@ -35,5 +37,9 @@
     <ProjectReference Include="..\FileIOHelper\FileIOHelper.csproj" />
     <ProjectReference Include="..\NetConnectionHelper\NetConnectionHelper.csproj" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)Assets\*.*&quot; &quot;$(OutDir)Assets\&quot; /Y /I /E" />
+  </Target>
 
 </Project>
