feat. NamedPipeline 구현중 (재연결 시도 로직 필요)

--- a/S1FileSync/S1FileSync.csproj
+++ b/S1FileSync/S1FileSync.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FileIOHelper\FileIOHelper.csproj" />
+    <ProjectReference Include="..\NamedPipeLine\NamedPipeLine.csproj" />
     <ProjectReference Include="..\NetConnectionHelper\NetConnectionHelper.csproj" />
   </ItemGroup>
 
