prob. Named Pipe가 서로 다른 파이프에 연결되고 있는 가능성이 존재. HandShake나 Hearbeat 로직 필요.

--- a/S1FileSync/Properties/launchSettings.json
+++ b/S1FileSync/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "S1FileSync": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "runAsAdministrator": true
     }
   }
 }
