feat&update. 동기화 주기 문제 해결 및 설치 완료 (ver 1.0)

--- a/S1FileSyncService/settings.ini
+++ b/S1FileSyncService/settings.ini
@@ -1,9 +1,10 @@
 [Settings]
-RemoteLocation=
-LocalLocation=
+RemoteLocation=\\192.168.0.52\AccessManager
+LocalLocation=D:\Projects\TestFolder
 FileExtensions=
-SyncInterval=1.00:00:00
-UseFlatStructure=False
+SyncInterval=00:01:00
+Username=admin
+Password=test13579
+FolderPattern=
+UseFlatStructure=True
 DuplicateHandling=0
-Username=
-Password=
