feat. IPC 간소화, WPF 프로세스에서 리소스 제어 추가, TODO. IPC 재연결 로직 수정, 리소스 제어 테스트

--- a/S1FileSync/S1FileSync.csproj
+++ b/S1FileSync/S1FileSync.csproj
@@ -9,6 +9,8 @@
     <Authors>Jay9011</Authors>
     <ApplicationIcon>Assets\app.ico</ApplicationIcon>
     <GenerateTemporaryAssembly>true</GenerateTemporaryAssembly>
+    <FileVersion>1.1.0.0</FileVersion>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
