--- a/S1FileSyncService/S1FileSyncService.csproj
+++ b/S1FileSyncService/S1FileSyncService.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-S1FileSyncService-c05ab5eb-bee0-4c76-a21d-97b829dd2342</UserSecretsId>
     <Authors>Jay9011</Authors>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
